@@ -22,6 +22,9 @@ ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
 else
   confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 endif
+ifeq ($(origin CC),default)
+  CC := $(DEB_HOST_GNU_TYPE)-gcc
+endif
 
 # Export dpkg build flags
 DEB_CFLAGS_MAINT_APPEND = -Wall
@@ -74,8 +77,8 @@ build-arch: build-stamp
 	# build upstream cryptsetup
 	$(MAKE)
 	# build askpass and passdev keyscripts
-	gcc $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -pedantic -std=c99 debian/askpass.c -o debian/askpass
-	gcc $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -pedantic -std=c99 debian/passdev.c -o debian/scripts/passdev
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -pedantic -std=c99 debian/askpass.c -o debian/askpass
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -pedantic -std=c99 debian/passdev.c -o debian/scripts/passdev
 
 build: build-indep build-arch
 
